# ml-tech-assessment

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
app/: configurations.py  metrics.py  prompts.py  text_normalizer.py  transcript_parser.py
app/adapters/: gemini.py  groq.py  openai.py
app/api/: dependencies.py  rate_limit.py  routes.py
app/models/: transcript.py
app/ports/: __init__.py  llm.py  repository.py
app/repositories/: in_memory.py  postgres.py  sqlite_in_memory.py
app/services/: transcript.py
docs/: integration_test_results.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: DeleteButton.tsx
frontend/lib/: api.ts
grafana/: Dockerfile
grafana/dashboards/: transcript-api.json
k8s/: ingress.yaml  namespace.yaml  secrets.example.yaml
k8s/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/grafana/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/prometheus/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
nginx/: nginx.conf
prometheus/: Dockerfile  entrypoint.sh  prometheus.yml.tmpl
resources/: career_coaching_plain.txt  leadership_coaching.vtt  onboarding_coaching.txt  product_team_standup.srt
tests/: conftest.py  test_text_normalizer.py  test_transcript_parser.py
tests/adapters/: test_postgres_repository.py
tests/api/: test_rate_limit.py  (+1 more)
(+6 files in other folders)
